--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -61,6 +61,8 @@
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.35.3",
+    "@types/react": "16.4.14",
+    "@types/react-dom": "16.0.7",
     "babel-eslint": "7.0.0",
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.16.0",
@@ -94,7 +96,7 @@
     "run-sequence": "1.2.2",
     "ts-jest": "19.0.2",
     "tsify": "4.0.0",
-    "typescript": "2.7.2",
+    "typescript": "3.0.3",
     "watchify": "3.7.0"
   },
   "jenkinscd": {
