--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -2,7 +2,7 @@
   "name": "@jenkins-cd/blueocean-pipeline-editor",
   "version": "0.0.4",
   "description": "Pipeline editor plugin for Jenkins Blue Ocean",
-  "main": "dist/index.js",
+  "main": "src/main/js/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
