--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -13,7 +13,7 @@
     "test:watch": "gulp test:watch",
     "bundle": "gulp bundle",
     "bundle:watch": "gulp bundle:watch",
-    "mvnbuild": "gulp lint bundle && browserify src/main/js/ie/iepolyfills.js > target/classes/org/jenkins/ui/jsmodules/blueocean-web/iepolyfills.js",
+    "mvnbuild": "bash buildjs.sh",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
     "buildProd": "webpack --mode production",
