re-add react-addons-css-transition-group and fix more js warnings

--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -82,6 +82,7 @@
     "moment": "2.19.3",
     "moment-duration-format": "2.2.2",
     "react": "15.4.2",
+    "react-addons-css-transition-group": "15.4.2",
     "react-addons-update": "15.4.2",
     "react-autocomplete": "1.8.1",
     "react-dom": "15.4.2",
@@ -99,6 +100,7 @@
       "moment@any",
       "moment-duration-format@any",
       "react@any",
+      "react-addons-css-transition-group",
       "react-dom@any",
       "react-redux@any",
       "react-router@any",
