--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -20,6 +20,7 @@
     "build": "webpack --mode development"
   },
   "devDependencies": {
+    "@alienfast/i18next-loader": "^1.0.16",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/js-builder": "0.0.63",
     "babel-eslint": "7.0.0",
