--- a/pom.xml
+++ b/pom.xml
@@ -473,7 +473,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>github-branch-source</artifactId>
-            <version>2.3.2</version>
+            <version>2.3.7-20180927.114148-1</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
