--- a/blueocean-jwt/pom.xml
+++ b/blueocean-jwt/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.jenkins.blueocean</groupId>
     <artifactId>blueocean-parent</artifactId>
-    <version>1.10.0-beta-1-SNAPSHOT</version>
+    <version>${revision}${changelist}</version>
   </parent>
 
   <artifactId>blueocean-jwt</artifactId>
