--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -38,7 +38,10 @@
     "LICENSE",
     "README.md",
     "licenses",
-    "dist"
+    "src/js",
+    "less",
+    "icons",
+    "fonts"
   ],
   "repository": {
     "type": "git",
