--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/blueocean-pipeline-editor",
-  "version": "0.0.4",
+  "version": "1.0.0-alpha.0",
   "description": "Pipeline editor plugin for Jenkins Blue Ocean",
   "main": "src/main/js/index.js",
   "repository": {
@@ -29,7 +29,7 @@
     "src/main"
   ],
   "devDependencies": {
-    "@jenkins-cd/blueocean-dashboard": "0.0.1",
+    "@jenkins-cd/blueocean-dashboard": "^1.0.0-alpha.0",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.5",
@@ -71,10 +71,10 @@
     "typescript": "2.7.2"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.171",
+    "@jenkins-cd/blueocean-core-js": "^1.0.0-alpha.0",
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
+    "@jenkins-cd/js-modules": "0.0.10",
     "lodash.debounce": "4.0.8",
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
