--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jenkins-cd/design-language",
   "jdlName": "jenkins-design-language",
-  "version": "0.0.164",
+  "version": "1.0.0-alpha.0",
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "src/js/components/index.js",
   "scripts": {
