--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -64,7 +64,7 @@
     "typescript": "2.7.2"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "^1.0.0-alpha.0",
+    "@jenkins-cd/blueocean-core-js": "1.0.0-alpha.0",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/js-extensions": "0.0.44",
