--- a/blueocean-personalization/package.json
+++ b/blueocean-personalization/package.json
@@ -47,7 +47,7 @@
     "reactify": "1.1.1"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.171",
+    "@jenkins-cd/blueocean-core-js": "1.0.0-alpha.0",
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/js-modules": "0.0.10",
