--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -13,14 +13,14 @@
     "test:watch": "gulp test:watch",
     "bundle": "gulp bundle",
     "bundle:watch": "gulp bundle:watch",
-    "mvnbuild": "bash buildjs.sh",
+    "mvnbuild": "webpack --mode production",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
     "buildProd": "webpack --mode production",
     "build": "webpack --mode development"
   },
   "devDependencies": {
-    "@alienfast/i18next-loader": "1.0.16",
+    "@alienfast/i18next-loader": "^1.0.16",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/js-builder": "0.0.63",
     "babel-eslint": "7.0.0",
@@ -31,33 +31,33 @@
     "babel-preset-stage-0": "6.16.0",
     "bluebird-global": "1.0.1",
     "create-hmac": "1.1.4",
-    "css-loader": "1.0.0",
+    "css-loader": "^1.0.0",
     "eslint": "2.13.1",
     "eslint-plugin-react": "4.3.0",
-    "file-loader": "2.0.0",
+    "file-loader": "^2.0.0",
     "giti": "1.1.3",
     "gulp": "3.9.1",
-    "gulp-babel": "7.0.1",
-    "gulp-copy": "1.1.0",
-    "gulp-jest": "4.0.2",
-    "gulp-less": "4.0.1",
-    "gulp-rename": "1.4.0",
-    "gulp-sourcemaps": "2.6.4",
-    "gulp-typescript": "4.0.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-copy": "^1.1.0",
+    "gulp-jest": "^4.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^4.0.1",
     "jest": "19.0.2",
-    "jest-cli": "23.5.0",
+    "jest-cli": "^23.5.0",
     "jquery-detached": "2.1.4-v4",
-    "less-loader": "4.1.0",
-    "mini-css-extract-plugin": "0.4.2",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "ncp": "2.0.0",
-    "progress-bar-webpack-plugin": "1.11.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "reactify": "1.1.1",
     "ts-jest": "19.0.2",
-    "ts-loader": "4.5.0",
+    "ts-loader": "^4.5.0",
     "tsify": "4.0.0",
     "typescript": "2.7.2",
-    "webpack": "4.17.1",
-    "webpack-cli": "3.1.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "zombie": "4.2.1"
   },
   "dependencies": {
@@ -66,7 +66,7 @@
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/js-modules": "0.0.10",
-    "babel-loader": "7.1.5",
+    "babel-loader": "^7.1.5",
     "history": "2.0.2",
     "immutable": "3.8.1",
     "keymirror": "0.1.1",
