--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "bootstrap": "npm install && lerna clean -y && lerna bootstrap && lerna link --force-local"
+  },
   "devDependencies": {
     "lerna": "^3.1.4"
   }
