make lerna run all unit tests

--- a/blueocean-web/pom.xml
+++ b/blueocean-web/pom.xml
@@ -106,7 +106,9 @@
                         </goals>
                         <configuration>
                             <!-- The package.json must define an "mvntest" script -->
-                            <arguments>run mvntest</arguments>
+                            <arguments>run test</arguments>
+                            <workingDirectory>../</workingDirectory>
+                            <installDirectory>./</installDirectory>
                         </configuration>
                     </execution>
 
