Change to 2.4.0 now that it is released

--- a/pom.xml
+++ b/pom.xml
@@ -473,7 +473,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>github-branch-source</artifactId>
-            <version>2.3.7-20180928.091855-2</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
