--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -54,6 +54,7 @@
     "gulp-typescript": "^5.0.0-alpha.3",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
+    "jest-junit": "^5.2.0",
     "mocha": "3.1.0",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
