--- a/pom.xml
+++ b/pom.xml
@@ -527,7 +527,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jira</artifactId>
-            <version>3.0.3-20181012.084345-1</version>
+            <version>3.0.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
