update module order in pom.xml and fix dashboard ts module resolution for jest tests

--- a/blueocean-dashboard/tsconfig.json
+++ b/blueocean-dashboard/tsconfig.json
@@ -20,7 +20,11 @@
 		"lib": [
 			"dom",
 			"es2018"
-		]
+		],
+		"baseUrl": ".",
+		"paths": {
+			"@jenkins-cd/blueocean-core-js": ["../blueocean-core-js/src/js"]
+		}
 	},
 	"exclude": [
 		"target",
