--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -64,6 +64,8 @@
     "typescript": "2.7.2"
   },
   "dependencies": {
+    "@imeredith/es-extensions-api": "^0.1.5",
+    "@imeredith/es-extensions-react": "^0.1.5",
     "@jenkins-cd/blueocean-core-js": "1.0.0-alpha.0",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/design-language": "0.0.162",
