--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -39,7 +39,7 @@
     "babel-preset-stage-0": "6.16.0",
     "chai": "3.5.0",
     "create-hmac": "1.1.4",
-    "enzyme": "2.4.1",
+    "enzyme": "2.9.1",
     "eslint": "2.13.1",
     "eslint-plugin-flowtype": "2.25.0",
     "eslint-plugin-react": "4.3.0",
@@ -55,6 +55,7 @@
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
     "jest-junit": "^5.2.0",
+    "jsdom": "^11.5.1",
     "mocha": "3.1.0",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
