New versions of things

--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.0.16",
+    "@types/bluebird-global": "3.5.0",
+    "@types/node": "9.6.4",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/js-builder": "0.0.63",
     "babel-eslint": "7.0.0",
@@ -65,12 +67,18 @@
     "@jenkins-cd/blueocean-core-js": "1.0.0-alpha.0",
     "@jenkins-cd/blueocean-dashboard": "1.0.0-alpha.0",
     "@jenkins-cd/design-language": "0.0.162",
+    "@jenkins-cd/es-extensions": "^0.2.2",
+    "@jenkins-cd/es-extensions-react": "^0.2.2",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/js-modules": "0.0.10",
     "babel-loader": "^7.1.5",
     "history": "2.0.2",
     "immutable": "3.8.1",
     "keymirror": "0.1.1",
+    "i18next": "3.5.2",
+    "i18next-browser-languagedetector": "1.0.0",
+    "i18next-xhr-backend": "1.2.0",
+   
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
     "mobx-react-devtools": "4.2.6",
