--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -3,7 +3,7 @@
   "jdlName": "jenkins-design-language",
   "version": "1.0.0-alpha.0",
   "description": "Styles, assets, and React classes for Jenkins Design Language",
-  "main": "src/js/components/index.js",
+  "main": "dist/js/components/index.js",
   "scripts": {
     "storybook": "npm run gulp build && start-storybook -p 9001 --static-dir dist/assets/",
     "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
@@ -38,10 +38,7 @@
     "LICENSE",
     "README.md",
     "licenses",
-    "src/js",
-    "less",
-    "icons",
-    "fonts"
+    "dist"
   ],
   "repository": {
     "type": "git",
