--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -2,6 +2,7 @@
   "name": "@jenkins-cd/blueocean-web",
   "version": "1.0.0-alpha.1",
   "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
@@ -65,12 +66,13 @@
     "zombie": "4.2.1"
   },
   "dependencies": {
+    "@jenkins-cd/blueocean-extension-points": "1.0.0",
     "@jenkins-cd/blueocean-core-js": "^1.0.0-alpha.1",
     "@jenkins-cd/blueocean-dashboard": "^1.0.0-alpha.1",
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/es-extensions": "^0.4.0",
-    "@jenkins-cd/es-extensions-react": "^0.4.0",
-    "@jenkins-cd/es-extensions-store": "^0.4.0",
+    "@jenkins-cd/es-extensions": "^0.5.0",
+    "@jenkins-cd/es-extensions-react": "^0.5.0",
+    "@jenkins-cd/es-extensions-store": "^0.5.0",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/js-modules": "0.0.10",
     "babel-loader": "^7.1.5",
