--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/blueocean-dashboard",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Dashboard for Jenkins Blue Ocean",
   "license": "MIT",
   "private": true,
@@ -67,7 +67,7 @@
     "typescript": "2.7.2"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "^1.0.0-alpha.1",
+    "@jenkins-cd/blueocean-core-js": "^1.0.0",
     "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/es-extensions": "^0.5.0",
