--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <node.version>6.4.0</node.version>
         <npm.version>3.10.3</npm.version>
+        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
     </properties>
 
 
