--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,76 @@
           <version>${jacoco.version}</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>instance-identity</artifactId>
+          <version>2.2</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>ssh-cli-auth</artifactId>
+          <version>1.4</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>sshd</artifactId>
+          <version>2.4</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>slave-installer</artifactId>
+          <version>1.6</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>windows-slave-installer</artifactId>
+          <version>1.9.2</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>launchd-slave-installer</artifactId>
+          <version>1.2</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>upstart-slave-installer</artifactId>
+          <version>1.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.modules</groupId>
+          <artifactId>systemd-slave-installer</artifactId>
+          <version>1.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.ui</groupId>
+          <artifactId>jquery-detached</artifactId>
+          <version>1.2.1</version>
+          <scope>test</scope>
+          <classifier>core-assets</classifier>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.ui</groupId>
+          <artifactId>bootstrap</artifactId>
+          <version>1.3.2</version>
+          <scope>test</scope>
+          <classifier>core-assets</classifier>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.ui</groupId>
+          <artifactId>handlebars</artifactId>
+          <version>1.1.1</version>
+          <scope>test</scope>
+          <classifier>core-assets</classifier>
+      </dependency>
   </dependencies>
 
   <dependencyManagement>
