Revert "Prepare for 1.10.0 release (#1893)"
This reverts commit ea73b86d0d15b99278619d0f905cb680a070638b.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </licenses>
 
   <properties>
-    <revision>1.10.0</revision>
+    <revision>1.10.0-beta-1</revision>
     <changelist>-SNAPSHOT</changelist>
     <java.level>8</java.level>
     <jenkins.version>2.121.1</jenkins.version> <!-- Should be kept in sync with the version resulting from Dockerfile FROM statement-->
