--- a/blueocean-github-pipeline/pom.xml
+++ b/blueocean-github-pipeline/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>blueocean-parent</artifactId>
     <groupId>io.jenkins.blueocean</groupId>
-    <version>${revision}${changelist}</version>
+    <version>1.10.2</version>
   </parent>
 
   <name>GitHub Pipeline for Blue Ocean</name>
