--- a/acceptance-tests/runner/runtime/logging.properties
+++ b/acceptance-tests/runner/runtime/logging.properties
@@ -2,7 +2,7 @@
 #  	Default Logging Configuration File
 #
 # You can use a different file by specifying a filename
-# with the java.util.logging.config.file system property.  
+# with the java.util.logging.config.file system property.
 # For example java -Djava.util.logging.config.file=myfile
 ############################################################
 
@@ -10,7 +10,7 @@
 #  	Global properties
 ############################################################
 
-# "handlers" specifies a comma separated list of log Handler 
+# "handlers" specifies a comma separated list of log Handler
 # classes.  These handlers will be installed during VM startup.
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
@@ -49,3 +49,4 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 # Turn on logging for different packages by adding lines below.
 
 #org.jenkinsci.plugins.ssegateway.level=FINEST
+org.jenkinsci.plugins.ssegateway.level=FINEST
