task/prep-jenkins-2-138-4 * more wip, still aint right

--- a/acceptance-tests/runner/runtime/logging.properties
+++ b/acceptance-tests/runner/runtime/logging.properties
@@ -50,3 +50,4 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
 #org.jenkinsci.plugins.ssegateway.level=FINEST
 org.jenkinsci.plugins.ssegateway.level=FINEST
+org.apache.http.level=FINEST
