--- a/blueocean-executor-info-plugin/pom.xml
+++ b/blueocean-executor-info-plugin/pom.xml
@@ -51,25 +51,25 @@
         <dependency>
             <groupId>io.jenkins.blueocean</groupId>
             <artifactId>blueocean-pipeline-api-impl</artifactId>
-            <version>${blueocean.version}</version>
+            <version>${revision}${changelist}</version>
         </dependency>
 
         <dependency>
             <groupId>io.jenkins.blueocean</groupId>
             <artifactId>blueocean</artifactId>
-            <version>${blueocean.version}</version>
+            <version>${revision}${changelist}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>io.jenkins.blueocean</groupId>
             <artifactId>blueocean-rest</artifactId>
-            <version>${blueocean.version}</version>
+            <version>${revision}${changelist}</version>
         </dependency>
         <dependency>
             <groupId>io.jenkins.blueocean</groupId>
             <artifactId>blueocean-web</artifactId>
-            <version>${blueocean.version}</version>
+            <version>${revision}${changelist}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
