--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
     <module>blueocean-bitbucket-pipeline</module>
     <module>blueocean-pipeline-editor</module>
     <module>blueocean-jira</module>
-    <module>blueocean-executor-info-plugin</module>
+    <module>blueocean-executor-info</module>
   </modules>
 
   <repositories>
@@ -300,7 +300,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>blueocean-executor-info-plugin</artifactId>
+            <artifactId>blueocean-executor-info</artifactId>
             <version>${project.version}</version>
         </dependency>
 
